--- a/team_picker/package.json
+++ b/team_picker/package.json
@@ -13,9 +13,11 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "knex": "^0.20.13",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.0.2"
   }
